--- a/profile.html
+++ b/profile.html
@@ -77,7 +77,7 @@
         <div class="top-bar">
 
             <div class="logo">
-                <img src="apt.png" alt="Rentify Logo">
+                <img src="images/apt.png" alt="Rentify Logo">
                 <h2>Rentify</h2>
             </div>
 
@@ -89,11 +89,11 @@
 
         <div class="sidebar">
             <h3></h3>
-            <img src="search.png" alt="search symbol" height="45" width="50">
+            <img src="images/search.png" alt="search symbol" height="45" width="50">
             
-            <img src="message.png" alt="search symbol" height="60" width="60">
-            <img src="profile.png" alt="search symbol" height="45" width="45">
-            <img src="notification.png" alt="search symbol" height="45" width="45">
+            <img src="images/message.png" alt="search symbol" height="60" width="60">
+            <img src="images/profile.png" alt="search symbol" height="45" width="45">
+            <img src="images/notification.png" alt="search symbol" height="45" width="45">
         </div>
 
         <div class="main">
