--- a/Home.html
+++ b/Home.html
@@ -22,7 +22,7 @@
 	
 		<div class = "sidebar">
 		
-			<a href = "#">Home</a>
+			<a href = "Home.html"><img src="images/rentifyLogo.png" alt="Rentify Logo"></a>
 			<br>
 			<a href = "#">Search</a>
 			<a href = "#">Messages</a>
