About Us page & css

--- a/Home.html
+++ b/Home.html
@@ -8,7 +8,7 @@
 	<head>
 	
 		<title>Rentify.</title>
-		<link rel = "stylesheet" href = "Lab6CSS.css" type = "text/css"/>
+		<link rel = "stylesheet" href = "css/Lab6CSS.css" type = "text/css"/>
 	
 	</head>
 
@@ -21,14 +21,24 @@
 		</div>
 	
 		<div class = "sidebar">
-		
-			<a href = "Home.html"><img src="images/rentifyLogo.png" alt="Rentify Logo"></a>
-			<br>
-			<a href = "#">Search</a>
-			<a href = "#">Messages</a>
-			<a href = "#">Profile</a>
-			<a href = "#">Announcements</a>
-			<a href = "#">About Us</a>
+			<div class="logo">
+			<a href = "Home.html"><img src="images/rentifyLogo.png" title="Home" alt="Rentify Logo"></a>
+			</div>
+			<br><a href = "#">
+			<img src="images/search.png" title= "Search" alt="search symbol" height="30" width="30">Search
+			</a>
+            <a href = "#">
+			<img src="images/message.png" title= "Message" alt="message symbol" height="30" width="30">Messages
+            </a>
+			<a href = "#">
+			<img src="images/profile.png" title= "Profile" alt="profile symbol" height="30" width="30">Profile
+            </a>
+			<a href = "#">
+			<img src="images/notification.png" title= "Announcements" alt="notification symbol" height="30" width="30">Announcements
+			</a>
+			<a href="AboutUs.html">
+			<img src="images/aboutUs.png" title= "About Us" alt="notification symbol" height="30" width="30">About Us
+			</a>
 		
 		</div>
 		
