about us update

--- a/profile.html
+++ b/profile.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>Rentify</title>
+    <title>Rentify Profile</title>
     <link rel = "stylesheet" href = "css/profileCSS.css" type = "text/css"/>
 </head>
 
