--- a/Home.html
+++ b/Home.html
@@ -17,9 +17,21 @@
 		<div class = "topbar">
 		
 			<a href = "#">Rentify.</a>
-		
+			<div class="topbar-buttons">
+				<a href="#login">Login</a>
+				<a href="#signup">Sign Up</a>
+			</div>
 		</div>
-	
+		<div class="welcome-msg">
+			<div class="text-content">
+				<h2>WELCOME TO RENTIFY</h2>
+				<p>We are Rentify, your go-to platform for vibrant and connected living communities!
+					 Our user-friendly interface enhances communication and information sharing between 
+					 residents and managers of various living spaces. We're thrilled to have you on board!</p>
+				<a href="AboutUs.html"><button class="topbar-buttons">Learn More</button></a>
+			</div>
+			<img src="images/jed-villejo-bEcC0nyIp2g-unsplash.jpg" alt="People Running">
+		</div>
 		<div class = "sidebar">
 			<div class="logo">
 			<a href = "Home.html"><img src="images/rentifyLogo.png" title="Home" alt="Rentify Logo"></a>
