--- a/Home.html
+++ b/Home.html
@@ -8,7 +8,7 @@
 	<head>
 	
 		<title>Rentify.</title>
-		<link rel = "stylesheet" href = "css/Lab6CSS.css" type = "text/css"/>
+		<link rel = "stylesheet" href = "css/Home.css" type = "text/css"/>
 	
 	</head>
 
