--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 		</div>
 		<div class = "sidebar">
 			<div class="logo">
-			<a href = "Home.html"><img src="images/rentifyLogo.png" title="Home" alt="Rentify Logo"></a>
+			<a href = "index.html"><img src="images/rentifyLogo.png" title="Home" alt="Rentify Logo"></a>
 			</div>
 			<br><a href = "#">
 			<img src="images/search.png" title= "Search" alt="search symbol" height="30" width="30">Search
@@ -42,7 +42,7 @@
             <a href = "#">
 			<img src="images/message.png" title= "Message" alt="message symbol" height="30" width="30">Messages
             </a>
-			<a href = "#">
+			<a href = "profile.html">
 			<img src="images/profile.png" title= "Profile" alt="profile symbol" height="30" width="30">Profile
             </a>
 			<a href = "#">
