--- a/profile.html
+++ b/profile.html
@@ -12,7 +12,7 @@
         <div class="top-bar">
 
             <div class="logo">
-                <img src="images/rentifyLogo.png" alt="Rentify Logo" onclick="window.location.href='Home.html'">
+                <img src="images/rentifyLogo.png" alt="Rentify Logo" onclick="window.location.href='index.html'">
 
             </div>
 
@@ -32,7 +32,7 @@
             <img src="images/message.png" alt="message symbol" height="60" width="60" onclick="window.location.href='messages.html'">
             <img src="images/profile.png" alt="search symbol" height="45" width="45" onclick="window.location.href='profile.html'">
             <img src="images/notification.png" alt="search symbol" height="45" width="45" onclick="window.location.href='notifications.html'">
-            <img src="images/aboutUs.png" alt="search symbol" height="45" width="45" onclick="window.location.href='aboutus.html'">
+            <img src="images/aboutUs.png" alt="search symbol" height="45" width="45" onclick="window.location.href='AboutUs.html'">
         </div>
 
         <div class="main">
