--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
 	</head>
 
 	<body>
-	
+		<div id="overlay" onclick="off()"></div>
+
 		<div class = "topbar">
 		
 			<a href = "#">Rentify.</a>
@@ -39,19 +40,47 @@
 				<p class="signup-p">Join Rentify today to discover and connect with people that match your lifestyle. 
 					Sign up now and find out what's going on in your community!</p>
 				<div class="button2">
-					<a href="#" id="openPopup">Find Your Community</a>
+					<a href="#" id="openPopup" onclick="on()">Find Your Community</a>
 				</div>
+
 				<div class="popup" id="signupPopup">
 					<div class="popup-content">
+						<span class="close-button" id="closePopup" onclick="off()">&#10006;</span>
+
+						<h1>Sign Up</h1>
 						<!-- Your sign-up form goes here -->
 						<form>
-							<!-- Form fields go here -->
-							<label for="username">Username:</label>
+							<!-- Name field -->
+							<label for="name">Name:</label>
+							<input type="text" id="name" name="name" required>
+
+							<!-- Email field -->
+							<label for="email">Email:</label>
+							<input type="email" id="email" name="email" required>
+
+							<!-- Dropdown for current renting location -->
+							<label for="rentingLocation">Where Are You Currently Renting?</label>
+							<select id="rentingLocation" name="rentingLocation" required>
+								<option value="" disabled selected>Choose From List</option>
+								<option value="option1">Good Neighborhood</option>
+								<option value="option2">Example Option 2</option>
+								<!-- Add more options as needed -->
+							</select>
+
+							<!-- Create Username field -->
+							<label for="username">Create Username:</label>
 							<input type="text" id="username" name="username" required>
+
+							<!-- Create Password field -->
+							<label for="password">Create Password:</label>
+							<input type="password" id="password" name="password" required>
+
 							<!-- Add other form fields as needed -->
+
 							<button type="submit">Sign Up</button>
-						</form>
-						<button id="closePopup">Close</button>
+							<p>Already have an account? <a href="#login">Login Here!</a></p>
+        					</form>
+						
 					</div>
 				</div>	
 			</div>
