--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 			<a href = "#">Rentify.</a>
 			<div class="topbar-buttons">
 				<a href="#login">Login</a>
-				<a href="#signup">Sign Up</a>
+				<a href="#" class="signup-link" onclick="on()">Sign Up</a>
 			</div>
 		</div>
 		<div class="welcome-msg">
