--- a/AboutUs.html
+++ b/AboutUs.html
@@ -16,8 +16,7 @@
 		<div class="topbar">
 			<a href="#">Rentify.</a>
 			<div class="topbar-buttons">
-				<a href="#login">Login</a>
-				<a href="#signup">Sign Up</a>
+				<a href="index.html">Home</a>
 			</div>
 		</div>
 
@@ -52,11 +51,6 @@
 				</div>
 			</div>
 		</div>
-		
-		
-		
-		
-		
 		<div class = "sidebar">
 			<div class="logo">
 			<a href = "index.html"><img src="images/rentifyLogo.png" title="Home" alt="Rentify Logo"></a>
