--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 						<span class="close-button" id="closePopup" onclick="off()">&#10006;</span>
 
 						<h1>Sign Up</h1>
-						<form action="HomeLoggedIn.html" method="post">
+						<form action="Home.html" method="post">
 							<!-- Name field -->
 							<label for="name">Name:</label>
 							<input type="text" id="name" name="name" required>
@@ -85,7 +85,7 @@
 						<span class="close-button" id="closeLoginPopup" onclick="offLogin()">&#10006;</span>
 				
 						<h1>Login</h1>
-						<form action="HomeLoggedIn.html" method="post">
+						<form action="Home.html" method="post">
 							<!-- Username field -->
 							<label for="loginUsername">Username:</label>
 							<input type="text" id="loginUsername" name="loginUsername" required>
